force-app/main/default/objects/ClaimDiagnosis__c/ClaimDiagnosis__c.object-meta.xml
<CustomObject>
    <description>Represents the clinical diagnosis for which the service, equipment, or medication was provided.</description>
    <label>ClaimDiagnosis</label>
    <nameField>
        <label>Diagnosis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClaimDiagnosis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>