force-app/main/default/objects/ClaimDiagnosis__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <inlineHelpText>Diagnosis code or description.</inlineHelpText>
    <label>Diagnosis</label>
    <referenceTo>HealthCare_Diagnosis__c</referenceTo>
    <relationshipLabel>ClaimDiagnosis</relationshipLabel>
    <relationshipName>ClaimDiagnosisCode</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>