force-app/main/default/objects/ClaimDiagnosis__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <formula>Diagnosis__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnosis Code</label>
    <type>Text</type>
</CustomField>