force-app/main/default/objects/ClaimDiagnosis__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <inlineHelpText>Claim diagnosis ID number.</inlineHelpText>
    <label>Line Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>